# neoflake

./: Cargo.toml  LICENSE  README.md
src/: generator.rs  lib.rs  snowflake.rs
tests/: setup_macro.rs
