[package]
name = "neoflake"
description = "Generate Twitter/Discord-style unique ids quickly and scalably"
authors = ["Jacqueline Kulas"]
license = "MIT"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
lazy_static = { version = "1.5.0", optional = true }
thiserror = "2.0.18"
tracing = { version = "0.1.44", optional = true }

[features]
default = ["setup"]
setup = ["dep:lazy_static"]
tracing = ["dep:tracing"]