[package]
name = "neoflake"
description = "Generate Twitter/Discord-style unique ids quickly and scalably"
authors = ["Jacqueline Kulas"]
license = "MIT"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/jqkul/neoflake"
keywords = ["id", "unique", "snowflake", "twitter", "discord"]
categories = ["algorithms", "date-and-time"]

[dependencies]
chrono = "0.4.44"
lazy_static = { version = "1.5.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde-aux = { version = "4.7.0", optional = true }
thiserror = "2.0.18"
tracing = { version = "0.1.44", optional = true }

[dev-dependencies]
serde_json = "1.0.149"
rand = "0.10.0"

[features]
default = ["setup"]
setup = ["dep:lazy_static"]
tracing = ["dep:tracing"]
serde = ["dep:serde", "dep:serde-aux"]